# three-mlagents

./: .cursorrules  .gitignore  404.html  CLAUDE.md  README.md  index.html
.agents/: README.md  settings.json
api/: .gitignore  main.py  pyproject.toml  requirements.txt  test_ollama.py  train_migration.py
api/astrodynamics_tensorboard/PPO_1/: events.out.tfevents.1753674291.lycidas.local.15151.0
api/examples/: astrodynamics.py  ball3d.py  basic.py  bicycle.py  brick_break.py  crawler.py  fish.py  fish_swarm.py  food_collector.py  glider.py  gridworld.py  intersection.py  kraken.py  labyrinth.py  minecraft.py  minefarm.py  pirate_ship.py  push.py  self_driving_car.py  simcity.py  simcity_deckgl.py  simcity_kepler.py  walljump.py  worm.py
api/mlagents_bridge/: env.py  server.py
api/notebooks/: crawler_dev.ipynb  debug_geometry.py  debug_observations.py  test_actuator_stiffness.py  test_physics.py  test_reward_structure.py  test_stable_stance.py
api/policies/: basic_policy.onnx  minefarm_policy.py  student_policy.py
api/services/: llm.py
backend/: .gitignore  README.md  main.py  pyproject.toml
backend/examples/: astrodynamics.py  ball3d.py  basic.py  bicycle.py  brick_break.py  crawler.py  fish.py  food_collector.py  glider.py  gridworld.py  intersection.py  kraken.py  labyrinth.py  minecraft.py  push.py  self_driving_car.py  simcity.py  simcity_deckgl.py  walljump.py  worm.py
backend/mlagents/: __init__.py  cli.py  envs.py  registry.py  training.py  websocket_training.py
backend/services/: llm.py
backend/tests/: test_mlagents.py
client/: .gitignore  (+6 more)
(+130 files in other folders)
