[project]
name = "three-mlagents-backend"
version = "0.1.0"
description = "Python training, evaluation, and FastAPI backend for Three ML-Agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "gymnasium[mujoco]>=1.2.0",
    "httpx>=0.28.0",
    "numpy>=2.3.0,<2.4.0",
    "python-multipart>=0.0.21",
    "requests>=2.32.0",
    "stable-baselines3[extra]>=2.7.1",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "uvicorn>=0.40.0",
    "websockets>=15.0.1",
]

[project.scripts]
three-mlagents = "mlagents.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mlagents"]
